<resources>
    <string name="app_name">Card Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_card_details">Enter Your Card\nDetails</string>
    <string name="card_capture">Card Capture</string>
    <string name="cvv">CVV</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="card_details_are_stored_securely">Card details are stored securely</string>
</resources>